--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.2.1",
     "@mui/material": "^7.0.2",
     "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.3",
     "@types/json-schema": "^7.0.15",
     "@types/ws": "^8.18.1",
