--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.3",
+    "@radix-ui/react-visually-hidden": "^1.2.0",
+    "@tanstack/react-query": "^5.74.4",
     "@types/json-schema": "^7.0.15",
     "@types/ws": "^8.18.1",
     "class-variance-authority": "^0.7.1",
