--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@headlessui/react": "^2.2.1",
     "@mui/material": "^7.0.2",
     "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.3",
     "@radix-ui/react-visually-hidden": "^1.2.0",
     "@tanstack/react-query": "^5.74.4",
