--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@mui/material": "^7.0.2",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dismissable-layer": "^1.1.9",
+    "@radix-ui/react-focus-scope": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-toast": "^1.2.11",
     "@radix-ui/react-tooltip": "^1.2.3",
